feat(): Bug Fix, bump V2.2.0